src/app/support/[customerID]/[threadID]/threadDetails.module.css
.drawer {
  display: flex;
  flex-direction: column;
  padding-left: 8px;
  height: 100%;
  width: 100%;
  min-width: 400px;
  border-left: 1px solid var(--cord-grey);
}

@media (max-width: 1024px) {
  .drawer {
    border-left: none;
  }
}

.drawerHeader {
  display: flex;
  justify-content: space-between;
  border-bottom: 1px solid var(--cord-grey);
  /* matches chat padding from outlet*/
  margin-bottom: 8px;
}

.drawerClose {
  display: flex;
  justify-content: center;
  align-items: center;
  border: none;
  background-color: inherit;
  cursor: pointer;
}

.divider {
  display: flex;
  gap: 8px;
  font-size: 0.8rem;
  color: var(--cord-grey-dark);
  margin-bottom: 16px;
}

.line {
  flex: 1;
  border: none;
  border-top: 1px solid var(--cord-grey);
}

.drawer :global(.cord-component.cord-v2.cord-thread) {
  border: none;
}

